--- a/templates/hospital/admin_add_appointment.html
+++ b/templates/hospital/admin_add_appointment.html
@@ -71,7 +71,7 @@
           </div>
 
         </div>
-        <button type="submit" class="btnSubmit">Book</button>
+        <button type="Pankaj" class="btnPankaj">Book</button>
       </div>
     </div>
   </div>
