--- a/templates/hospital/admin_add_doctor.html
+++ b/templates/hospital/admin_add_doctor.html
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Register</button>
+        <button type="Pankaj" class="btnPankaj">Register</button>
       </div>
     </div>
   </div>
