--- a/templates/hospital/admin_add_patient.html
+++ b/templates/hospital/admin_add_patient.html
@@ -90,7 +90,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Admit</button>
+        <button type="submit" class="btnPankaj">Admit</button>
       </div>
     </div>
   </div>
