--- a/templates/hospital/admin_add_patient.html
+++ b/templates/hospital/admin_add_patient.html
@@ -27,7 +27,7 @@
       border-radius: 1.5rem;
     }
 
-    .btnSubmit {
+    .btnPankaj {
       border: none;
       border-radius: 1.5rem;
       padding: 1%;
@@ -90,7 +90,7 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btnPankaj">Admit</button>
+        <button type="Pankaj" class="btnPankaj">Admit</button>
       </div>
     </div>
   </div>
